Fixed
- Table entity
- Column entity
- Constraint entity